# podcast_research

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  design.md  pyproject.toml  ruff.toml
.github/workflows/: test.yml
backup/pre_clean_validation_20260601_1441/reports/: -JBhTBu9ZbA_tech_ai_v2_extraction.json  -JBhTBu9ZbA_tech_ai_v2_report.md  3ZVqcW6Wwmg_tech_ai_v2_extraction.json  3ZVqcW6Wwmg_tech_ai_v2_report.md  4Gmd5UTF4rk_tech_ai_v2_extraction.json  4Gmd5UTF4rk_tech_ai_v2_report.md  4oq91rzQcO8_tech_ai_v2_extraction.json  4oq91rzQcO8_tech_ai_v2_report.md  9d899Ram9Bs_tech_ai_v2_extraction.json  9d899Ram9Bs_tech_ai_v2_report.md  sample_report.md  (+19 more)
data/: user_settings.json
data/subtitles/: sample.srt
data/validation/: clean_first_run_validation_20260601_1449.md  real_flow_validation_20260602_1319.md  rerun_replacement_validation_20260605_1151.md  rerun_replacement_validation_20260605_1152.md
docs/: ARCHITECTURE.md  DEV_GUIDE.md  INGEST_QUEUE_DESIGN.md  P3_PLAN.md  ROADMAP.md  SOURCE_INGESTION.md
scripts/: audit_knowledge_graph.py  diagnose_clean_vault.py  validate_real_clean_flow.py  validate_rerun.py
src/podcast_research/: __main__.py  cli.py  config.py  config_store.py  logging_config.py
tests/: conftest.py  test_api_reports.py  test_canonicalize.py  test_chunking.py  test_clean_e2e_obsidian.py  test_cleaner.py  test_cli.py  test_db.py  test_ingest_jobs.py  test_job_persistence.py  test_knowledge_quality_audit.py  test_obsidian.py  test_parser.py  test_pipeline_mock.py  test_report.py  test_source_file_import.py  test_sources_channels.py  test_sources_tracked.py  test_ui_smoke.py  test_web_pages.py  test_workspace.py
(+98 files in other folders)
