[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-research"
version = "0.1.0"
description = "投资播客研究助手 — 将播客字幕中的投资观点结构化沉淀"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
llm = [
    "httpx>=0.27",
]

[project.scripts]
podcast-research = "podcast_research.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]