[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-research"
version = "0.1.0"
description = "投资播客研究助手 — 将播客字幕中的投资观点结构化沉淀"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "youtube-transcript-api>=0.6",
    "yt-dlp>=2024.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.20",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "playwright>=1.50",
    "ruff>=0.11",
]

[project.scripts]
podcast-research = "podcast_research.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]